# voxel

./: Cargo.toml  build.rs
res/shaders/: default.wgsl
src/: camera_controller.rs  cubes.rs  macros.rs  main.rs  main_pass.rs  material.rs  mesh.rs  render_object.rs  renderer.rs  shader.rs  startup.rs  texture.rs  vertex.rs
src/rendering/: buffer.rs  camera.rs  global_bindings.rs  main_pass.rs  material.rs  mesh.rs  mod.rs  render_object.rs  renderer.rs  shader.rs  texture.rs  vertex.rs  wgpu_context.rs
src/rendering/bind_groups/: bind_group_builder.rs  bind_group_layout_builder.rs  mod.rs
src/rendering/utils/: bind_group_builder.rs  bind_group_layout_builder.rs  mod.rs  sampler_builder.rs
