[package]
name = "voxel"
version = "0.1.0"
edition = "2024"

[dependencies]
pretty_env_logger = "0.5.0"
log = "0.4.27"
winit = "0.30.12"
wgpu = "26.0.1"
anyhow = "1.0.100"
pollster = "0.4.0"
bytemuck = { version = "1.24", features = [ "derive" ] }
legion = "0.4.0"
image = { version = "0.25.9", features = [ "png", "jpeg" ] }

[build-dependencies]
anyhow = "1.0.100"
fs_extra = "1.3.0"
glob = "0.3"
